# kompas

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README  README.md  RELEASE-HOWTO
doc/: Brainstorming.dox  Building.dox  MainPage.dox
modules/: NSIS.template.in
package/: .gitignore  CPackOptions.cmake  build.sh  changelog.sh  copy-modules.sh  download-obs.sh  make-github-like-archive.sh  makearchive.sh  mysql-source-arch-win.sh  sync-modules.sh
